fix: stabilize build and test execution